<resources>
    <string name="app_name">Agenda Firebase</string>
    <string name="search_hint">Buscar contato</string>
    <string name="title_activity_detalhe">Novo contato</string>
    <string name="nome_do_contato">Nome do contato</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="nome">Nome</string>
    <string name="fone">Fone</string>
    <string name="email">Email</string>
    <string name="tipo_contato">Tipo de Contato</string>
    <string name="lista_vazia">Lista de contatos vazia</string>
    <string name="contato_nao_encontrado">Contato não encontrado</string>
    <string name="contato_adicionado">Contato adicionado</string>
    <string name="contato_alterado">Informações do contato alteradas</string>
    <string name="contato_apagado">Contato removido</string>

    <!--Spinner e Itens Menu Busca-->
    <string name="txt_todos">Todos</string>
    <string name="txt_amigos">Amigos</string>
    <string name="txt_familia">Família</string>
    <string name="txt_trabalho">Trabalho</string>
    <string name="txt_outro">Outro</string>

    <string-array name="tipos_contatos">
        <item>@string/txt_amigos</item>
        <item>@string/txt_familia</item>
        <item>@string/txt_trabalho</item>
        <item>@string/txt_outro</item>
    </string-array>
    
</resources>


